--- a/assets/css/my-style.css
+++ b/assets/css/my-style.css
@@ -1,36 +1,6 @@
-* { box-sizing: border-box; }
 
-/* force scrollbar */
-html { overflow-y: scroll; }
-
-body { font-family: sans-serif; }
-
-/* ---- grid ---- */
-
-.grid {
-    background: #DDD;
+/* Thumbnail gallery */
+.no-pad-thumb {
+    padding: 0px;
 }
 
-/* clear fix */
-.grid:after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
-/* ---- .grid-item ---- */
-
-.grid-sizer,
-.grid-item {
-    width: 33.333%;
-    padding: 1px;
-}
-
-.grid-item {
-    float: left;
-}
-
-.grid-item img {
-    display: block;
-    max-width: 100%;
-}
